# Multiplayer-2D3D-Game-Engine

./: CMakeLists.txt  README.md  build_project.bat  config.json  run_example_game.bat  run_multiplayer.bat
docs/: ARCHITECTURE.md  NETWORKING.md  SCRIPTING.md
examples/demo_game/: config.json  scene.json
examples/demo_game/scripts/: enemy.py  player.py
scenes/: main.json
scripts/: player_controller.py
src/: Config.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Input.cpp  Input.h  Logger.h  Network.cpp  Network.h  Scripting.cpp  Scripting.h  main.cpp
src/Renderer/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
